@@ -1,3 +1,11 @@
+2005-12-30 Jens Tkotz <jens@peino.de> 1.5.2-RC2-cvs-b5
+
+ * Fix: If user choosed "no caption" on upload, this setting was ignored.
+   Thanks to jobeus from forum.
+
+ * Fix: Removed deprecated Call-time pass-by-reference in watermarkform.
+   Thanks to Lypsik from forum.
+
 2005-12-29 Jens Tkotz <jens@peino.de> 1.5.2-RC2-cvs-b4
 
  * Fix: Added the two new help files to approved file list.
